tests/grammar/valid/v1_multi_line_comment.c
#include <stdint.h>
#include <stdio.h>

/*
 * The is a multi line
 *
 * comment
 */
int32_t a = 20;