tests/grammar/invalid/v6_invalid.c
#include <stdio.h>

/*
 * The is a multi line
 *
 * comment
 */

int main(int, char) {
    int32_t i;
    int64_t j;
    ;
    char a;
    ;
    ;

    a=2;

    int b;
}
